--- a/八大排序算法-简单选择排序.md
+++ b/八大排序算法-简单选择排序.md
@@ -2,16 +2,12 @@
 简单选择排序是一种**选择排序**。
 
 选择排序：每趟从待排序的记录中选出关键字最小的记录，顺序放在已排序的记录序列末尾，直到全部排序结束为止。
-<!--more-->
-简单排序的大致处理流程为：
+
+简单选择排序的大致处理流程为：
 
 - 从待排序序列中，找到关键字最小的元素；
 - 如果最小元素不是待排序序列的第一个元素，将其和第一个元素互换；
 - 从余下的 N - 1 个元素中，找出关键字最小的元素，重复(1)、(2)步，直到排序结束。
-
-![](https://blog-1258986886.cos.ap-beijing.myqcloud.com/%E6%8E%92%E5%BA%8F/6-10.jpg)
-
-如图所示，每趟排序中，将当前**第** **i** **小的元素放在位置** **i** 上。
 
 ### 2、代码
 
