--- a/剑指offer/面试题03.md
+++ b/剑指offer/面试题03.md
@@ -55,7 +55,7 @@ public:
 };
 ```
 
-- **方法二：使用集合**
+- **方法二：使用集合; 时间复杂度O(N),空间复杂度O(N)**
   - 遍历一遍数组，判断 `nums[i]` 是否存在于集合中；
   - 如果存在，则返回该值；如果不存在，将该值添加到集合中。
   - 时间和空间复杂度都为$O(N)$
@@ -78,6 +78,16 @@ public:
         return 0;
     }
 };
+```
+
+```python
+class Solution:
+    def findRepeatNumber(self, nums: [int]) -> int:
+        dic = set()
+        for num in nums:
+            if num in dic: return num
+            dic.add(num)
+        return -1
 ```
 
 - **方法三：排序算法**
@@ -108,7 +118,7 @@ public:
 };
 ```
 
-- **方法四：原地置换**
+- **方法四：原地置换;时间复杂度O(N),空间复杂度O(1)**
   - 还是先考虑题目中**0-n-1的元素大小的限制条件**
   - **思路，通过遍历判断nums[i]是否与i相等，若不相等，则进行如下操作：**
   - **判断nums[i] 与nums[nums[i]]是否相等，若相等，则直接返回**
@@ -132,4 +142,18 @@ class Solution {
         return -1;
     }
 }
+```
+
+```python
+class Solution:
+    def findRepeatNumber(self, nums: [int]) -> int:
+        i = 0
+        while i < len(nums):
+            if nums[i] = i:
+                i += 1
+                continue
+            if nums[i] = nums[nums[i]]: return nums[i]
+            else:
+                nums[nums[i]], nums[i] = nums[i], nums[nums[i]]
+        return -1
 ```
