--- a/剑指offer/面试题04.md
+++ b/剑指offer/面试题04.md
@@ -80,6 +80,23 @@ class Solution {
 }
 ```
 
+```python
+class Solution:
+    def findNumberIn2DArray(self, matrix: List[List[int]], target: int) -> bool:
+        # 左下角开始比较，i为行，j为列
+        i = len(matrix) - 1
+        j = 0
+        # 左下角比较排除行列
+        while i >= 0 and j <= len(matrix[0]) - 1:
+            if matrix[i][j] > target:
+                i -= 1
+            elif matrix[i][j] < target:
+                j += 1
+            else:
+                return True
+        return False
+```
+
 #### 方法三：逐行二分查找
 
 - 因为每行都是有序的，所以可**遍历每行，每行使用二分查找方法**
