--- a/剑指offer/面试题05.md
+++ b/剑指offer/面试题05.md
@@ -87,6 +87,16 @@ class Solution(object):
         return ''.join(s)
 ```
 
+```python
+class Solution:
+    def replaceSpace(self, s: str) -> str:
+        res = list()
+        for i in s:
+            if i == ' ': res.append('%20')
+            else: res.append(i)
+        return ''.join(res)
+```
+
 #### 方法4：方法1的py版
 
 - 不同的是，开辟新的字符数组时，遍历出了空格的数目，新的长度为`len(s) + 3*space_count`
