--- a/剑指offer/面试题10-1.md
+++ b/剑指offer/面试题10-1.md
@@ -66,4 +66,18 @@ public:
     }
 }; 
 ```
+- python代码理解：
+- a,b,sum相当于三个指针，每求一次sum，三者都会后移
+- a是代表循环了n次后的fib(n)的值
 
+```python
+class Solution:
+    def fib(self, n: int) -> int:
+        a = 0
+        b = 1
+        for _ in range(n):
+            temp = (a + b) % 1000000007
+            a = b
+            b = temp
+        return a
+```
