--- a/八大排序算法/冒泡排序.md
+++ b/八大排序算法/冒泡排序.md
@@ -6,7 +6,7 @@
 
 算法的名字由来是因为越小的元素会经由交换慢慢“浮”到数列的顶端，故名冒泡排序。
 
-### 2、代码
+### 2、代码（C++、Python）
 
 假设有一个大小为 N 的无序序列。以升序冒泡排序为例，冒泡排序就是要**每趟排序过程中通过两两比较相邻元素，将小的数字放到前面，大的数字放在后面。**
 
@@ -28,7 +28,7 @@ vector<int> bubbleSort(vector<int> list){
 	for (int i = 0; i < result.size() - 1; ++i){
 		cout << "第" << i + 1 << "趟排序:" << endl;;
 		// 从后向前依次的比较相邻两个数的大小
-		for (int j = 0; j < result.size() - 1; j++){
+		for (int j = 0; j < result.size() - i - 1; j++){
 			// 如果后面的元素小，则交换它们的位置
 			if (result[j + 1] < result[j]){
 				temp = result[j + 1];
@@ -67,6 +67,16 @@ void main(){
 	cout << endl;
 	system("pause");
 }
+```
+
+```python
+def bubble_sort(numberlist):
+    length = len(numberlist)
+    for i in range(length):
+        for j in range(1, length - i):
+            if numberlist[j - 1] > numberlist[j]:
+                numberlist[j], numberlist[j - 1] = numberlist[j - 1], numberlist[j]
+    return numberlis
 ```
 
 ### 3、算法分析
