--- a/八大排序算法/冒泡排序.md
+++ b/八大排序算法/冒泡排序.md
@@ -10,63 +10,31 @@
 
 假设有一个大小为 N 的无序序列。以升序冒泡排序为例，冒泡排序就是要**每趟排序过程中通过两两比较相邻元素，将小的数字放到前面，大的数字放在后面。**
 
-```c++
-#include <iostream>
-#include <vector>
+```python
+def bubbleSort(input_list):
+	'''
+	函数说明:冒泡排序（升序）
+	Parameters:
+		input_list - 待排序列表
+	Returns:
+		sorted_list - 升序排序好的列表
+	'''
+	if len(input_list) == 0:
+		return []
+	sorted_list = input_list
+	for i in range(len(sorted_list) - 1):
+		print('第%d趟排序:' % (i + 1))
+		for j in range(len(sorted_list) - 1):
+			if sorted_list[j + 1] < sorted_list[j]:
+				sorted_list[j], sorted_list[j + 1] = sorted_list[j + 1], sorted_list[j]
+			print(sorted_list)
+	return sorted_list
 
-using namespace std;
-
-vector<int> bubbleSort(vector<int> list){
-	vector<int> result;
-	if (list.empty()){
-		return result;
-	}
-
-	result = list;
-	int temp;
-	// 要遍历的次数
-	for (int i = 0; i < result.size() - 1; ++i){
-		cout << "第" << i + 1 << "趟排序:" << endl;;
-		// 从后向前依次的比较相邻两个数的大小
-		for (int j = 0; j < result.size() - i - 1; j++){
-			// 如果后面的元素小，则交换它们的位置
-			if (result[j + 1] < result[j]){
-				temp = result[j + 1];
-				result[j + 1] = result[j];
-				result[j] = temp;
-			}
-			cout << "排序中:";
-			for (int s = 0; s < result.size(); s++){
-				cout << result[s] << " ";
-			}
-			cout << endl;
-		}
-		cout << "排序结果:";
-		for (int s = 0; s < result.size(); s++){
-			cout << result[s] << " ";
-		}
-		cout << endl;
-	}
-	return result;
-}
-
-void main(){
-	int arr[] = { 6, 4, 8, 1, 2, 3, 9 };
-	vector<int> test(arr, arr + sizeof(arr) / sizeof(arr[0]));
-	cout << "排序前" << endl;
-	for (int i = 0; i < test.size(); i++){
-		cout << test[i] << " ";
-	}
-	cout << endl;
-	vector<int> result;
-	result = bubbleSort(test);
-	cout << "排序后" << endl;
-	for (int i = 0; i < result.size(); i++){
-		cout << result[i] << " ";
-	}
-	cout << endl;
-	system("pause");
-}
+if __name__ == '__main__':
+	input_list = [50, 123, 543, 187, 49, 30, 0, 2, 11, 100]
+	print('排序前:', input_list)
+	sorted_list = bubbleSort(input_list)
+	print('排序后:', sorted_list)
 ```
 
 ```python
@@ -113,69 +81,33 @@ Mmax = 3N(N-1)/2 = O($N^2$)
 
 代码如下：
 
-```c++
-#include <iostream>
-#include <vector>
+```python
+def bubbleSort(input_list):
+	'''
+	函数说明:冒泡排序（升序）
+	Parameters:
+		input_list - 待排序列表
+	Returns:
+		sorted_list - 升序排序好的列表
+	'''
+	if len(input_list) == 0:
+		return []
+	sorted_list = input_list
+	for i in range(len(sorted_list) - 1):
+		bChanged = False
+		print('第%d趟排序:' % (i + 1))
+		for j in range(len(sorted_list) - i - 1):
+			if sorted_list[j + 1] < sorted_list[j]:
+				sorted_list[j], sorted_list[j + 1] = sorted_list[j + 1], sorted_list[j]
+				bChanged = True
+			print(sorted_list)
+		if not bChanged:
+			break
+	return sorted_list
 
-using namespace std;
-
-vector<int> bubbleSort(vector<int> list){
-	vector<int> result;
-	if (list.empty()){
-		return result;
-	}
-
-	result = list;
-	int temp;
-	// 要遍历的次数
-	for (int i = 0; i < result.size() - 1; ++i){
-		cout << "第" << i + 1 << "趟排序:" << endl;;
-		//交换标志位
-		bool bChanged = false;
-		// 从后向前依次的比较相邻两个数的大小
-		for (int j = 0; j < result.size() - 1; j++){
-			// 如果后面的元素小，则交换它们的位置
-			if (result[j + 1] < result[j]){
-				temp = result[j + 1];
-				result[j + 1] = result[j];
-				result[j] = temp;
-				bChanged = true;
-			}
-			cout << "排序中:";
-			for (int s = 0; s < result.size(); s++){
-				cout << result[s] << " ";
-			}
-			cout << endl;
-		}
-		// 如果标志为false，说明本轮遍历没有交换，已经是有序数列，可以结束排序
-		if (false == bChanged){
-			break;
-		}
-		cout << "排序结果:";
-		for (int s = 0; s < result.size(); s++){
-			cout << result[s] << " ";
-		}
-		cout << endl;
-	}
-
-	return result;
-}
-
-void main(){
-	int arr[] = { 6, 4, 8, 1, 2, 3, 9 };
-	vector<int> test(arr, arr + sizeof(arr) / sizeof(arr[0]));
-	cout << "排序前" << endl;
-	for (int i = 0; i < test.size(); i++){
-		cout << test[i] << " ";
-	}
-	cout << endl;
-	vector<int> result;
-	result = bubbleSort(test);
-	cout << "排序后" << endl;
-	for (int i = 0; i < result.size(); i++){
-		cout << result[i] << " ";
-	}
-	cout << endl;
-	system("pause");
-}
+if __name__ == '__main__':
+	input_list = [50, 123, 543, 187, 49, 30, 0, 2, 11, 100]
+	print('排序前:', input_list)
+	sorted_list = bubbleSort(input_list)
+	print('排序后:', sorted_list)
 ```
