--- a/八大排序算法/快速排序.md
+++ b/八大排序算法/快速排序.md
@@ -20,75 +20,62 @@
 
 ### 2、代码
 
-```c++
-#include <iostream>
-#include <vector>
+```python
+def QuickSort(input_list, left, right):
+	'''
+	函数说明:快速排序（升序）
+	Parameters:
+		input_list - 待排序列表
+	Returns:
+		无
+	'''	
+	def division(input_list, left, right):
+		'''
+		函数说明:根据left和right进行一次扫描，重新找到基准数
+		Parameters:
+			input_list - 待排序列表
+			left - 左指针位置
+			right - 右指针位置
+		Returns:
+			left - 新的基准数位置
+		'''	
+		base = input_list[left]
+		while left < right:
+			while left < right and input_list[right] >= base:
+				right -= 1
+			input_list[left] = input_list[right]
+			while left < right and input_list[left] <= base:
+				left += 1
+			input_list[right] = input_list[left]
+		input_list[left] = base
+		return left
 
-using namespace std;
+	if left < right:
+		base_index = division(input_list, left, right)
+		QuickSort(input_list, left, base_index - 1)
+		QuickSort(input_list, base_index + 1, right)
 
-int division(vector<int> &list, int left, int right){
-	// 以最左边的数(left)为基准
-	int base = list[left];
-	while (left < right) {
-		// 从序列右端开始，向左遍历，直到找到小于base的数
-		while (left < right && list[right] >= base)
-			right--;
-		// 找到了比base小的元素，将这个元素放到最左边的位置
-		list[left] = list[right];
-
-		// 从序列左端开始，向右遍历，直到找到大于base的数
-		while (left < right && list[left] <= base)
-			left++;
-		// 找到了比base大的元素，将这个元素放到最右边的位置
-		list[right] = list[left];
-	}
-
-	// 最后将base放到left位置。此时，left位置的左侧数值应该都比left小；
-	// 而left位置的右侧数值应该都比left大。
-	list[left] = base;
-	return left;
-}
-
-// 快速排序
-void QuickSort(vector<int> &list, int left, int right){
-	// 左下标一定小于右下标，否则就越界了
-	if (left < right) {
-		// 对数组进行分割，取出下次分割的基准标号
-		int base = division(list, left, right);
-
-		// 对“基准标号“左侧的一组数值进行递归的切割，以至于将这些数值完整的排序
-		QuickSort(list, left, base - 1);
-
-		// 对“基准标号“右侧的一组数值进行递归的切割，以至于将这些数值完整的排序
-		QuickSort(list, base + 1, right);
-	}
-}
-
-void main(){
-	int arr[] = { 6, 4, 8, 9, 2, 3, 1 };
-	vector<int> test(arr, arr + sizeof(arr) / sizeof(arr[0]));
-	cout << "排序前" << endl;
-	for (int i = 0; i < test.size(); i++){
-		cout << test[i] << " ";
-	}
-	cout << endl;
-	vector<int> result = test;
-	QuickSort(result, 0, result.size() - 1);
-	cout << "排序后" << endl;
-	for (int i = 0; i < result.size(); i++){
-		cout << result[i] << " ";
-	}
-	cout << endl;
-	system("pause");
-}
+if __name__ == '__main__':
+	input_list = [6, 4, 8, 9, 2, 3, 1]
+	print('排序前:', input_list)
+	QuickSort(input_list, 0, len(input_list) - 1)
+	print('排序后:', input_list)
 ```
 
 ### 3、算法分析
 
-#### 3-1、时间复杂度
+#### 3-1 时间复杂度
 
 当数据有序时，以第一个关键字为基准分为两个子序列，前一个子序列为空，此时执行效率最差。
 
 而当数据随机分布时，以第一个关键字为基准分为两个子序列，两个子序列的元素个数接近相等，此时执行效率最好。
 
 所以，数据越随机分布时，快速排序性能越好；数据越接近有序，快速排序性能越差。
+
+#### 3-2 空间复杂度
+
+快速排序在每次分割的过程中，需要 1 个空间存储基准值。而快速排序的大概需要 logN次的分割处理，所以占用空间也是 logN 个。
+
+### 4、算法稳定性
+
+在快速排序中，相等元素可能会因为分区而交换顺序，所以它是不稳定的算法。
