--- a/八大排序算法/希尔排序.md
+++ b/八大排序算法/希尔排序.md
@@ -6,38 +6,30 @@
 
 ### 2、代码
 
-```c++
-#include <iostream>
+```python
+# -*-coding:utf-8 -*-
+def shellSort(input_list):
+	length = len(input_list)
+	if length <= 1:
+		return input_list
+	sorted_list = input_list
+	gap = length // 2
+	while gap > 0:
+		for i in range(gap, length):
+			j = i - gap
+			temp = sorted_list[i]
+			while j >= 0 and temp < sorted_list[j]:
+				sorted_list[j+gap] = sorted_list[j]
+				j -= gap
+			sorted_list[j+gap] = temp
+		gap //= 2
+	return sorted_list 
 
-using namespace std;
-
-//希尔排序
-void shellSort(int iarr[],int length)
-{
-    int dt[3] = {5,3,1},i =0 ,j,k,temp;
-    for(j = 0; j < 3; ++j)
-    {
-        for(i = dt[j]; i < length; ++i)
-        {
-            temp = iarr[i];
-            k = i - dt[j];
-            while(temp < iarr[k] && k >= 0)
-            {
-                iarr[k + dt[j]] = iarr[k];
-                k -= dt[j];
-            }
-            iarr[k + dt[j]] =  temp;
-        }
-    }
-}
-int main()
-{
-    int a[25]={4,1,3,2,16,9,10,14,8,7,7,10,7,28,30,3,12,0,1,3,9,12,11,4,19};
-    shellSort(a,25);
-    for(int i=0;i < 25; ++i)
-        cout << a[i] << " ";
-    return 0;
-}
+if __name__ == '__main__':
+	input_list = [50, 123, 543, 187, 49, 30, 0, 2, 11, 100]
+	print('排序前:', input_list)
+	sorted_list = shellSort(input_list)
+	print('排序后:', sorted_list)
 ```
 
 ### 3、算法分析
