--- a/八大排序算法/直接插入排序.md
+++ b/八大排序算法/直接插入排序.md
@@ -18,53 +18,6 @@
 
 ### 2、代码
 
-```c++
-#include <iostream>
-#include <vector>
-
-using namespace std;
-
-vector<int> insertSort(vector<int> list){
-	vector<int> result;
-	if (list.empty()){
-		return result;
-	}
-	result = list;
-	// 第1个数肯定是有序的，从第2个数开始遍历，依次插入有序序列
-	for (int i = 1; i < result.size(); i++){
-		// 取出第i个数，和前i-1个数比较后，插入合适位置
-		int temp = result[i];
-		// 因为前i-1个数都是从小到大的有序序列，所以只要当前比较的数(list[j])比temp大，就把这个数后移一位
-		int j = i - 1;
-		for (j; j >= 0 && result[j] > temp; j--){
-			result[j + 1] = result[j];
-		}
-		result[j + 1] = temp;
-	}
-	return result;
-}
-
-void main(){
-	int arr[] = { 6, 4, 8, 9, 2, 3, 1 };
-	vector<int> test(arr, arr + sizeof(arr) / sizeof(arr[0]));
-	cout << "排序前" << endl;
-	for (int i = 0; i < test.size(); i++){
-		cout << test[i] << " ";
-	}
-	cout << endl;
-	vector<int> result;
-	result = insertSort(test);
-	cout << "排序后" << endl;
-	for (int i = 0; i < result.size(); i++){
-		cout << result[i] << " ";
-	}
-	cout << endl;
-	system("pause");
-}
-```
-
-Python代码：
-
 ```python
 # -*- coding:utf-8 -*-
 
@@ -107,69 +60,42 @@ if __name__ == '__main__':
 
 代码如下：
 
-```c++
-#include <iostream>
-#include <vector>
+```python
+# -*- coding:utf-8 -*-
 
-using namespace std;
+def BinarySearch(input_list, end, value):
+	left = 0
+	right = end - 1
+	while left <= right:
+		middle = left + (right - left) // 2
+		if input_list[middle] > value:
+			right = middle - 1
+		else:
+			left = middle + 1
 
-// 给定一个有序的数组，查找第一个大于等于value的下标，不存在返回-1
-int BinarySearch(vector<int> list, int n, int value){
-	int left = 0;
-	int right = n - 1;
+	return left if left < end else -1
 
-	while (left <= right){
-		int middle = left + ((right - left) >> 1);
+def BinaryInsertSort(input_list):
+	if len(input_list) == 0:
+		return []
+	result = input_list
+	for i in range(1, len(input_list)):
+		j = i - 1
+		temp = result[i]
+		insert_index = BinarySearch(result, i, result[i])
+		if insert_index != -1:
+			while j >= insert_index:
+				result[j + 1] = result[j]
+				j -= 1
+			result[j + 1] = temp
+	return result
 
-		if (list[middle] >= value){
-			right = middle - 1;
-		}
-		else{
-			left = middle + 1;
-		}
-	}
-	return (left < n) ? left : -1;
-}
 
-vector<int> BinaryInsertSort(vector<int> list){
-	vector<int> result = list;
-	for (int i = 1; i < result.size(); i++){
-		int insert_index = BinarySearch(result, i, result[i]);
-		if (insert_index != -1){
-			int temp = result[i];
-			int j = i - 1;
-			while (j >= insert_index){
-				result[j + 1] = result[j];
-				j--;
-			}
-			result[j + 1] = temp;
-		}
-		printf("第 %d 趟： ", i);
-		for (int i = 0; i < result.size(); i++){
-			cout << result[i] << " ";
-		}
-		cout << endl;
-	}
-	return result;
-}
-
-void main(){
-	int arr[] = { 6, 4, 8, 9, 2, 3, 1 };
-	vector<int> test(arr, arr + sizeof(arr) / sizeof(arr[0]));
-	cout << "排序前" << endl;
-	for (int i = 0; i < test.size(); i++){
-		cout << test[i] << " ";
-	}
-	cout << endl;
-	vector<int> result;
-	result = BinaryInsertSort(test);
-	cout << "排序后" << endl;
-	for (int i = 0; i < result.size(); i++){
-		cout << result[i] << " ";
-	}
-	cout << endl;
-	system("pause");
-}
+if __name__ == '__main__':
+	input_list = [6, 4, 8, 9, 2, 3, 1]
+	print('排序前:', input_list)
+	sorted_list = BinaryInsertSort(input_list)
+	print('排序后:', sorted_list)
 ```
 
 运行结果没有改变，只是在查找插入位置的次数减少了，提高了算法的效率。
