--- a/剑指offer/面试题22.md
+++ b/剑指offer/面试题22.md
@@ -1,33 +1,36 @@
-#### [剑指 Offer 24. 反转链表](https://leetcode-cn.com/problems/fan-zhuan-lian-biao-lcof/)
+#### [剑指 Offer 24. 反转链表](https://leetcode-cn.com/problems/lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof/)
 
 #### 题目描述
 
-- 定义一个函数，输入一个链表的头节点，反转该链表并输出反转后链表的头节点。
+输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。
+例如，一个链表有 6 个节点，从头节点开始，它们的值依次是 1、2、3、4、5、6。这个链表的倒数第 3 个节点是值为 4 的节点。
 
 #### 示例
+> 给定一个链表: 1->2->3->4->5, 和 k = 2.
+> 返回链表 4->5.
 
-> 输入: 1->2->3->4->5->NULL
-> 输出: 5->4->3->2->1->NULL
-
-#### 解法：双指针
-
-- pre初始为空；cur初始指向head
-- 循环将cur的next指向pre，pre和cur循环向后移动
+#### 解法
+- 按照删除倒数第k个结点的方法
 
 #### 代码：
 
 ```python
 class Solution:
-    def reverseList(self, head: ListNode) -> ListNode:
-        if not head:
-            return head
-        pre=None
-        cur=head
+    def getKthFromEnd(self, head: ListNode, k: int) -> ListNode:
+        cur = head
         while cur:
-            # cur.next = pre
-            # pre=cur
-            # cur = cur.next
-            cur.next, pre, cur = pre, cur, cur.next
-        return pre
+            k -= 1
+            cur = cur.next
+        # 示例 k=2, 此时 k = -3
+        if k > 0:
+            return None
+        elif k == 0:
+            return head
+        else:
+            cur = head
+            while k != 0:
+                k += 1 
+                # 最终 k = 0, cur 为倒数第k个点
+                cur = cur.next
+            return cur
 ```
-
