--- a/剑指offer/面试题32-3.md
+++ b/剑指offer/面试题32-3.md
@@ -2,3 +2,25 @@
 
 [面试题32 - III. 从上到下打印二叉树 III（层序遍历 BFS / 双端队列，清晰图解）](https://leetcode-cn.com/problems/cong-shang-dao-xia-da-yin-er-cha-shu-iii-lcof/solution/mian-shi-ti-32-iii-cong-shang-dao-xia-da-yin-er--3/)
 
+```python
+class Solution:
+    def levelOrder(self, root: TreeNode) -> List[List[int]]:
+        if not root: return []
+        res = []
+        queue = [root]
+        flag = True
+        while queue:
+            temp = []
+            for _ in range(len(queue)):
+                node = queue.pop(0)
+                temp.append(node.val)
+                if node.left: queue.append(node.left)
+                if node.right: queue.append(node.right)
+            if flag:
+                res.append(temp)
+            else:
+                res.append(temp[::-1])
+            flag = not flag
+            
+        return res
+```
