--- a/剑指offer/面试题38.md
+++ b/剑指offer/面试题38.md
@@ -33,3 +33,31 @@ class Solution:
         return res
 ```
 
+```python
+class Solution:
+    def permutation(self, s: str) -> List[str]:
+        res = []
+        c = list(s)
+        if not c: return res
+        n = len(c)
+        # 标记是否访问过
+        vis = [0] * n
+        def dfs(length, temp):
+            # 递归终止条件
+            if length == n:
+                val = ''.join(temp)
+                if val not in res:
+                    res.append(val)
+                return
+            #
+            for i in range(n):
+                if vis[i]:
+                    continue
+                # 标记访问
+                vis[i] = 1
+                dfs(length+1, temp+[c[i]])
+                # 回溯
+                vis[i] = 0
+        dfs(0, [])
+        return res
+```
