--- a/剑指offer/面试题39.md
+++ b/剑指offer/面试题39.md
@@ -51,6 +51,20 @@ class Solution:
         return 0
 ```
 
+```python
+class Solution:
+    def majorityElement(self, nums: List[int]) -> int:
+        target = len(nums) // 2
+        hash_map = {}
+        for num in nums:
+            if num in hash_map:
+                hash_map[num] += 1
+            else:
+                hash_map[num] = 1
+            if hash_map[num] > target:
+                return num
+```
+
 #### 解法2：数组排序法
 
 - 将所给数组排序吗，由于众数出现次数大于数组的一半，所以中间元素必为所求数字；
