--- a/剑指offer/面试题45.md
+++ b/剑指offer/面试题45.md
@@ -2,3 +2,19 @@
 
 #### [解法：一个还没懂的规律](https://leetcode-cn.com/problems/ba-shu-zu-pai-cheng-zui-xiao-de-shu-lcof/solution/mian-shi-ti-45-ba-shu-zu-pai-cheng-zui-xiao-de-s-4/)
 
+```python
+class Solution:
+    def minNumber(self, nums: List[int]) -> str:
+        def sort_rule(x, y):
+            # 字符串拼接的比较大小的规则
+            a, b = x + y, y + x
+            # 排序规则 x+y > y+x 说明x应该放在左边
+            if a > b: return 1
+            elif a < b: return -1
+            else: return 0
+        
+        strs = [str(num) for num in nums]
+        # 按照 上述排序规则 升序
+        strs.sort(key = functools.cmp_to_key(sort_rule))
+        return ''.join(strs)
+```
