--- a/剑指offer/面试题56-2.md
+++ b/剑指offer/面试题56-2.md
@@ -30,7 +30,7 @@ class Solution:
 - 查找哈希表中仅出现一次的数字
 - 时间复杂度`O(n)`,空间复杂度`O(n)`
 
-```
+```python
 class Solution(object):
     def singleNumber(self, nums):
         """
