--- a/剑指offer/面试题57-2.md
+++ b/剑指offer/面试题57-2.md
@@ -43,3 +43,28 @@ class Solution:
         return res
 ```
 
+```python
+class Solution:
+    def findContinuousSequence(self, target: int) -> List[List[int]]:
+        # 左右边界初始化
+        i = 1
+        j = 2
+        # 初始化的 sum 代表此时窗口内只有1 2 两个元素
+        s = 3
+        res = []
+        # 滑动窗口
+        while i < j:
+            if s == target:
+                res.append(list(range(i,j+1)))
+            if s < target:
+                # 左边界不动 右边界扩1 s加上扩的
+                j += 1
+                s += j
+            else:
+                # 大于等于都走这个分支 因为要找另一个等于target的组合
+                # s减去原来的左边界 左边界减1 右边界不动 
+                s -= i
+                i += 1
+                
+        return res
+```
