--- a/剑指offer/面试题57.md
+++ b/剑指offer/面试题57.md
@@ -22,4 +22,20 @@
   - 时间复杂度 O(N) ： N 为数组 nums 的长度；双指针共同线性遍历整个数组。
   - 空间复杂度 O(1) ： 变量 i, j 使用常数大小的额外空间。
 
+#### 代码
+```python
+class Solution:
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
+        i = 0
+        j = len(nums) - 1
+        while i < j:
+            s = nums[i] + nums[j]
+            if s < target:
+                i += 1
+            elif s > target:
+                j -= 1
+            else:
+                return [nums[i], nums[j]]
+        return []
+```
   
