--- a/剑指offer/面试题48.md
+++ b/剑指offer/面试题48.md
@@ -32,5 +32,17 @@ class Solution:
             cur_len = i - pre # 遍历到当前字符 最长不重复子串的长度
             length = max(length, cur_len)
         return length 
+
+    def lengthOfLongestSubstring2(self, s: str) -> int:
+        pre = -1
+        length = 0
+        dic = {}
+        for i in range(len(s)):
+            if s[i] in dic:
+                pre = max(pre, dic[s[i]])
+            dic[s[i]] = i
+            cur_len = i - pre
+            length = max(length, cur_len)
+        return length
 ```
 
