--- a/剑指offer/面试题59-2.md
+++ b/剑指offer/面试题59-2.md
@@ -37,5 +37,40 @@ class MaxQueue:
         return val
 ```
 
-- 有关Python中queue和deque的简单使用方法：[单向队列](https://www.cnblogs.com/saolv/p/9839717.html)、[双向队列](https://www.cnblogs.com/saolv/p/9839711.html)
+- 只使用Python中列表实现的方法
+
+```python
+import queue
+class MaxQueue:
+
+    def __init__(self):
+        self.queue = []
+        self.deque = []
+
+
+    def max_value(self) -> int:
+        return self.deque[0] if self.deque else -1
+
+
+    def push_back(self, value: int) -> None:
+        self.queue.append(value)
+        while self.deque and self.deque[-1] < value:
+            self.deque.pop()
+        self.deque.append(value)
+
+
+    def pop_front(self) -> int:
+        if not self.queue: return -1
+        val = self.queue.pop(0)
+        if val == self.deque[0]:
+            self.deque.pop(0)
+        return val
+        
+
+# Your MaxQueue object will be instantiated and called as such:
+# obj = MaxQueue()
+# param_1 = obj.max_value()
+# obj.push_back(value)
+# param_3 = obj.pop_front()
+```
 
