--- a/剑指offer/面试题21.md
+++ b/剑指offer/面试题21.md
@@ -26,7 +26,7 @@ class Solution:
         i, j = 0, len(nums)-1
         while i<j:
             while i<j and nums[i]%2 != 0: i = i+1
-            while i<j and nums[j]%2 ==0 : j = j-1
+            while i<j and nums[j]%2 == 0: j = j-1
             nums[i],nums[j] = nums[j],nums[i]
         return nums
 ```
@@ -44,3 +44,19 @@ class Solution:
         return nums
 ```
 
+- **当需要保证奇偶的相对顺序时，不可使用双指针，使用冒泡的思想，每次改变相邻的表**
+```python
+def exchange2(self, nums):
+        n = len(nums)
+
+        for i in range(n-1, 0, -1):
+            flag = False
+            for j in range(i):
+                if nums[j] %2 == 0 and nums[j+1] %2 != 0:
+                    flag = True
+                    nums[j], nums[j+1] = nums[j+1], nums[j]
+            # 如果上一趟没有交换  说明已经满足有序
+            if not flag:
+                break
+        return nums
+```
