--- a/剑指offer/面试题46.md
+++ b/剑指offer/面试题46.md
@@ -39,10 +39,10 @@ class Solution:
         a = b = 1
         for i in range(2, len(s) + 1):
             tmp = s[i - 2:i]
-            c = a + b if "10" <= tmp <= "25" else a
-            b = a
-            a = c
-        return a
+            c = a + b if "10" <= tmp <= "25" else b
+            b = c
+            a = b
+        return b
 ```
 
 - 再对字符串所占空间进行压缩，使用%和//操作，可依次得到倒数两位
