--- a/剑指offer/面试题03.md
+++ b/剑指offer/面试题03.md
@@ -2,83 +2,13 @@
 
 - 题目描述：找出数组中重复的数字。
 - 在一个长度为 n 的数组 nums 里的所有数字都在 0～n-1 的范围内。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。请找出数组中任意一个重复的数字。
-- **思路：首先想到的是不考虑时间空间限制的暴力方法，代码如下，超出时间限制**
 
-```c++
-class Solution {
-public:
-    int findRepeatNumber(vector<int>& nums) {
-        int j = 0;
-        int flag;
-        int temp;
-        while(j<nums.size()){
-            temp = nums[j];
-            flag = 0;
-            for(int i=0; i<nums.size(); i++){
-                if (temp == nums[i]){
-                    flag++;
-                    if(flag >= 2){
-                        return temp;
-                        break;
-                    }
-                }
-                continue;  
-            }
-            j++;
-        }
-        return -1;      
-    }
-};
-```
-
-- 查看优秀解法：
-- **方法一：布尔数组判重**
-  - 由于**数字范围都在0~n-1之内**，考虑**利用一个大小和nums相同的布尔数组记录某个数字是否出现过，如果当前数字没有出现过（对应flag为false），将对应flag标记为true；如果当前数字对应flag为true，说明出现过，将其输出。**
-  - 时间和空间复杂度都为$O(N)$
-
-- 代码如下：
-
-```c++
-// 注：此法关键是数字范围也都在0-n-1内
-class Solution {
-public:
-    int findRepeatNumber(vector<int>& nums) {
-        bool flag[nums.size()];
-        memset(flag, false, sizeof(flag));
-        for(int i = 0; i < nums.size(); i++)
-            if(flag[nums[i]])
-                return nums[i];
-            else
-                flag[nums[i]] = true;
-        return -1;
-    }
-};
-```
-
-- **方法二：使用集合; 时间复杂度O(N),空间复杂度O(N)**
+- **方法：使用集合; 时间复杂度O(N),空间复杂度O(N)**
   - 遍历一遍数组，判断 `nums[i]` 是否存在于集合中；
   - 如果存在，则返回该值；如果不存在，将该值添加到集合中。
-  - 时间和空间复杂度都为$O(N)$
+  - 时间和空间复杂度都为$O(N)$；HashSet 添加与查找元素皆为O(1)
 
 - 代码：
-
-```c++
-class Solution {
-public:
-    int findRepeatNumber(vector<int>& nums) {
-        set<int> count;
-        for(auto i:nums){
-          	// count函数查找元素在集合中出现的次数
-            if(count.count(i) == 1){
-                return i;
-            }else{
-                count.insert(i);
-            }
-        }
-        return 0;
-    }
-};
-```
 
 ```python
 class Solution:
@@ -90,59 +20,14 @@ class Solution:
         return -1
 ```
 
-- **方法三：排序算法**
-  - 先将数组排序，再去遍历判断新的数组；
-  - 若相邻元素相同，则返回该数；
-  - 时间复杂度：$O(Nlog N )$ ；空间复杂度：$O(1)$
-- 代码：
-
-```c++
-class SolutionSort
-{
-public:
-    int findRepeatNumber(vector<int> &nums)
-    {
-        // 异常处理
-        int res = 0;
-        sort(nums.begin(), nums.end());
-        for (int i = 0; i != nums.size() - 1; ++i)
-        {
-            if (nums[i] == nums[i + 1])
-            {
-                res = nums[i];
-                break;
-            }
-        }
-        return res;
-    }
-};
-```
-
 - **方法四：原地置换;时间复杂度O(N),空间复杂度O(1)**
   - 还是先考虑题目中**0-n-1的元素大小的限制条件**
   - **思路，通过遍历判断nums[i]是否与i相等，若不相等，则进行如下操作：**
   - **判断nums[i] 与nums[nums[i]]是否相等，若相等，则直接返回**
   - **若不相等，则将nums[i] 与nums[nums[i]]交换，使下标与数对应**
-- 代码：
+  - Python 中， a,b=c,d 操作的原理是先暂存元组 (c,d) ，然后 “按左右顺序” 赋值给 a 和 b 。因此，若写为 nums[i],nums[nums[i]]=num[nums[i]],nums[i] ，则 nums[i] 会先被赋值，之后 nums[nums[i]] 指向的元素则会出错。
 
-```c++
-class Solution {
-    public int findRepeatNumber(int[] nums) {
-        int temp;
-        for(int i=0;i<nums.length;i++){
-            while (nums[i]!=i){
-                if(nums[i]==nums[nums[i]]){
-                    return nums[i];
-                }
-                temp=nums[i];
-                nums[i]=nums[temp];
-                nums[temp]=temp;
-            }
-        }
-        return -1;
-    }
-}
-```
+- 代码：
 
 ```python
 class Solution:
