--- a/剑指offer/面试题13.md
+++ b/剑指offer/面试题13.md
@@ -32,42 +32,31 @@ class Solution:
         return dfs(0,0)
 ```
 
-- 代码二：**DFS+数位和增量公式解法**
-
-```python
-class Solution:
-    def movingCount(self, m: int, n: int, k: int) -> int:
-        def dfs(i, j, si, sj):
-            if i >= m or j >= n or k < si + sj or (i, j) in visited: return 0
-            visited.add((i,j))
-            return 1 + dfs(i + 1, j, si + 1 if (i + 1) % 10 else si - 8, sj) + dfs(i, j + 1, si, sj + 1 if (j + 1) % 10 else sj - 8)
-
-        visited = set()
-        return dfs(0, 0, 0, 0)
-'''
-作者：jyd
-链接：https://leetcode-cn.com/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/solution/mian-shi-ti-13-ji-qi-ren-de-yun-dong-fan-wei-dfs-b/
-来源：力扣（LeetCode）
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
-```
-
 - 代码三：**广度优先遍历 BFS**
 
 ```python
 class Solution:
     def movingCount(self, m: int, n: int, k: int) -> int:
-        queue, visited,  = [(0, 0, 0, 0)], set()
+        # 求一个数的数位和
+        def sums(x):
+            s = 0
+            while x:
+                s += x%10
+                x = x//10
+            return s
+        # 广度优先搜索 O(MN) O(MN)
+        # 从左上角开始 每层遍历下和右两个相邻的位置元素
+        queue = [(0,0,sums(0)+ sums(0))]
+        visited = set()
         while queue:
-            i, j, si, sj = queue.pop(0)
-            if i >= m or j >= n or k < si + sj or (i, j) in visited: continue
+            i, j, ij_sum = queue.pop(0)
+            if i >= m or j >= n or (i,j) in visited or ij_sum > k:
+                continue
             visited.add((i,j))
-            queue.append((i + 1, j, si + 1 if (i + 1) % 10 else si - 8, sj))
-            queue.append((i, j + 1, si, sj + 1 if (j + 1) % 10 else sj - 8))
+            queue.append((i+1,j,sums(i+1)+sums(j)))
+            queue.append((i,j+1,sums(i)+sums(j+1)))
         return len(visited)
+
 '''
-作者：jyd
-链接：https://leetcode-cn.com/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/solution/mian-shi-ti-13-ji-qi-ren-de-yun-dong-fan-wei-dfs-b/
-来源：力扣（LeetCode）
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
-```
+
 
