--- a/剑指offer/面试题39.md
+++ b/剑指offer/面试题39.md
@@ -67,7 +67,7 @@ class Solution:
 
 #### 解法2：数组排序法
 
-- 将所给数组排序吗，由于众数出现次数大于数组的一半，所以中间元素必为所求数字；
+- 将所给数组排序，由于众数出现次数大于数组的一半，所以中间元素必为所求数字；
 - 时间复杂度：O(nlogn)
 
 ```python
@@ -83,3 +83,18 @@ class Solution(object):
         return nums[len(nums) // 2] # /返回浮点数结果  //返回整除结果
 ```
 
+
+#### 解法3：正负票数抵消法 时间O(N)和空间复杂度为 O(1)
+
+```python
+class Solution:
+    def majorityElement(self, nums: List[int]) -> int:
+        votes = 0
+        for num in nums:
+            if votes == 0: x = num
+            if num == x: 
+                votes += 1
+            else:
+                votes -= 1
+        return x
+```
